# cookCrewAgent

./: .gitignore  pyproject.toml  requirements.txt
knowledge/: recipes.json
src/ai_recipe_crew/: __init__.py  crew.py  main.py
src/ai_recipe_crew/config/: agents.yaml  tasks.yaml
src/ai_recipe_crew/rag/: chunker.py  ingest.py  retriever.py
src/ai_recipe_crew/tools/: retriever_tool.py
src/ai_recipe_crew/utils/: loader.py  parser.py
